Fix unintentional wrapping of top menu

--- a/public/project/less/styles.less
+++ b/public/project/less/styles.less
@@ -93,6 +93,12 @@ a {
       padding: 0 10px;
       margin: 8px;
       vertical-align: middle;
+      @media(max-width: @screen-xs-max) {
+        font-size: 16px;
+        margin: 10px 0 0 0;
+        padding-left: 0;
+        padding-right: 0;
+      }
     }
   }
   &-home {
